--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -29,10 +29,10 @@ We use R package "TwitteR" in this project. The search function in this package 
 
 
 \subsubsection{Preliminary steps}
-Under the first definition of trolls, we need to find users that tweet swear words and mention Taylor Swift. So we first come up with a badword dictionary, which contains 172 swear words and their internet variations. For each swear word in the dictionary, we search for 300 tweets that contain the swear word and mention Taylor Swift (the returned results are all less than 300). Then we get the screen usernames of those returned tweets as trolls. Similarily we search for 3000 tweets that contain "love" and mention TS, and get the usernames as fans. Since there are much more fans than trolls, we just use a single keyword "love" to identify fans. However we find this is not enough to correctly identify trolls and fans. So we manually inspect each tweets and decide whether it is a true troll/fan tweet. We delete tweets that are not troll in the troll set and tweets that are not fan from the fan set. Then we get the unique screen usernames and identify them as true trolls and fans.
+Under the first definition of trolls, we need to find users that tweet swear words and mention Taylor Swift. So we first come up with a badword dictionary, which contains 172 swear words and their internet variations. This dictionary is a modification from https://raw.githubusercontent.com/mattkcole/Data_Science_Project/master/badwords.txt. For each swear word in the dictionary, we search for 300 tweets that contain the swear word and mention Taylor Swift (the returned results are all less than 300). Then we get the screen usernames of those returned tweets as trolls. Similarily we search for 3000 tweets that contain "love" and mention TS, and get the usernames as fans. Since there are much more fans than trolls, we just use a single keyword "love" to identify fans. However we find this is not enough to correctly identify trolls and fans. So we manually inspect each tweets and decide whether it is a true troll/fan tweet. We delete tweets that are not troll in the troll set and tweets that are not fan from the fan set. Then we get the unique screen usernames and identify them as true trolls and fans.
 
 \subsubsection{Raw Data}
-We manually identify 291 trolls and 603 fans. We search for most recent 200 tweets for each individual. The search is splited to several search requests since the API rate limit is reached by a single search. We collect 26,205 tweets from those 291 mean users, as well as 41,847 tweets from those 603 fan users.
+We manually identify 290 trolls and 510 fans. We search for most recent 200 tweets for each individual. The search is splited to several search requests since the API rate limit is reached by a single search. We collect 25,915 tweets from those 290 mean users, as well as 41,244 tweets from those 510 fan users.
 
 \subsubsection{Data Cleaning}
 
