--- a/code.Rmd
+++ b/code.Rmd
@@ -1,3 +1,6 @@
+---
+output: html_document
+---
 ##### 140.711 Advanced Data Science Project
 ####Yuchen Yang
 
@@ -13,8 +16,6 @@ library(wordcloud)
 library(dplyr)
 library(sentiment)
 library(ggplot2)
-library(boot)
-library(e1071)
 library(knitr)
 library(SnowballC)
 
@@ -29,7 +30,7 @@ setup_twitter_oauth(consumer_key,consumer_secret,access_token,access_secret)
 
 ```
 
-2 functions I write.
+2 functions to do text cleaning and count the number of words.
 
 ```{r functions}
 MyClean <- function(status){#character list
@@ -87,7 +88,7 @@ write.table(fan.users,"./data/usernames_fan.txt",sep = "\n",row.names = FALSE,co
 ```
 
 ##0.3 Search for tweets for each of the troll/fan. 
-Search for most recent n=200 tweets for each identified troll/fan. There is rate limit for this search so wait for 15 minutes if reaching the rate limit. Also some accounts are private, so I manually delete them in the "usernames_mean.txt" and "usernames_fan.txt". For each tweet returned, use MyClean() function to get a clean version of the text(i.e. remove URL and hex code emoji). Save the file as "status_mean_all.txt" and "status_mean_clean.txt" for raw and clean version for trolls. Similarly for fans. In each file, each username is followed by tweets of that user.
+Search for most recent n=200 tweets for each identified troll/fan. There is rate limit for this search so wait for 15 minutes if reaching the rate limit. Also some accounts are private, so I manually delete them in the "usernames_mean.txt" and "usernames_fan.txt". For each tweet returned, use MyClean() function to get a clean version of the text(i.e. remove URL and hex coded emoji). Save the file as "status_mean_all.txt" and "status_mean_clean.txt" for raw and clean version for trolls. Similarly for fans. In each file, each username is followed by tweets of that user, with each tweet a seperate line.
 
 ```{r get tweets,eval=FALSE}
 #not run
@@ -190,7 +191,7 @@ ggplot(count.tweet,aes(x=count,group=user,colour=user)) +
 
 ##2.1 Wordcloud
 
-Paste all tweets for troll/fan as a single text and construct the term-document matrix to count the number of occurance of each word. Then manually select words from the top 200 to construct the wordcloud.
+Paste all tweets for troll/fan as a single text and construct the term-document matrix to count the number of occurrence of each word. Then manually select words from the top 200 to construct the wordcloud, deleting meaningless words and words of high frequency in both sets.
 
 ```{r wordcloud}
 text.mean.wordcloud <- readLines("./data/status_mean_clean.txt")
@@ -234,8 +235,8 @@ wordcloud(words.fan,freq.fan,random.order = FALSE,colors=brewer.pal(8, "Dark2"),
 ```
 
 ##2.2 Sentimental Analysis
-We conduct 3 levels of sentiment analysis:
-This chuck takes a lot of time to run. Cache the result.
+We conduct 3 levels of sentiment analysis: tweet level, individual level and sentiment percentage level. See detail description in the report. Note that this chuck takes a long time to run. We cache the result in "code_cached". To re-run the whole analysis, we suggest skip this chuck, by setting "eval = FALSE" of this chuck. It will not influence the results in the rest of the sections.
+
 ```{r sentiment}
 ###tweet level
 sentiment.mean <- classify_polarity(unlist(tweet.mean.list), algorithm="bayes")[,4]
@@ -299,9 +300,47 @@ ggplot(percentage.dist,aes(percentage,colour = class)) + geom_density() +
 
 ###3 The model
 ##3.1 Feature selection
-Collapse all tweets for trolls as a single text and all tweets for fans as another single text. Compute the frenquency for each appearing word. If word A appears in one text but not the other, set the freqency of A in the other text as 0. Rank all words by descending order of the frenquency difference. Choose top 200 words, intersect with words selected to construct the wordcloud. 84 words are selected as feature words.
+Collapse all tweets for trolls as a single text and all tweets for fans as another single text. Compute the frenquency for each appearing word. If word A appears in one text but not the other, set the freqency of A in the other text as 0. Rank all words by descending order of the frenquency difference. Choose top 200 words as feature words.
+
+We randomly choose 80\% of the data as training data and 20\% as testing data. We select feature and fit the model on the training set and evaluate the model performance on the test set. 
 
 ```{r feature selection}
+#training and testing set
+tweet.mean <- NULL
+for (i in 1:n.mean){
+        tweet.mean[i] <- paste(tweet.mean.list[[i]],sep = " ", collapse = ' ')
+}
+tweet.fan <- NULL
+for (i in 1:n.fan){
+        tweet.fan[i] <- paste(tweet.fan.list[[i]],sep = " ", collapse = ' ')
+}
+tweet.mean <- gsub("[[:punct:]]","",tweet.mean)
+tweet.mean <- tolower(tweet.mean)
+tweet.fan <- gsub("[[:punct:]]","",tweet.fan)
+tweet.fan <- tolower(tweet.fan)
+#training set
+set.seed(1)
+id.mean <- sample(n.mean,n.mean*0.8)
+id.fan <- sample(n.fan,n.fan*0.8)
+tweet.mean.train <- tweet.mean[id.mean]
+tweet.fan.train <- tweet.fan[id.fan]
+text.mean <- paste(tweet.mean.train,sep = " ", collapse = ' ')
+text.fan <- paste(tweet.fan.train,sep = " ", collapse = ' ')
+
+text.mean.corpus <- Corpus(VectorSource(text.mean))
+text.mean.corpus <- tm_map(text.mean.corpus,content_transformer(tolower))
+text.mean.corpus <- tm_map(text.mean.corpus,removeWords,stopwords("en"))
+matrix.mean <- TermDocumentMatrix(text.mean.corpus)
+freq.word <- as.matrix(matrix.mean)
+freq.word.order <- freq.word[order(freq.word,decreasing = TRUE),1]
+
+text.fan.corpus <- Corpus(VectorSource(text.fan))
+text.fan.corpus <- tm_map(text.fan.corpus,content_transformer(tolower))
+text.fan.corpus <- tm_map(text.fan.corpus,removeWords,stopwords("en"))
+matrix.fan <- TermDocumentMatrix(text.fan.corpus)
+freq.word.fan <- as.matrix(matrix.fan)
+freq.word.fan.order <- freq.word.fan[order(freq.word.fan,decreasing = TRUE),1]
+
 #compute word frenquency
 word.count.mean <- sum(freq.word.order)
 freq.word.order <- freq.word.order/word.count.mean
@@ -318,23 +357,15 @@ word.compare <- word.all %>%
         arrange(desc(abs)) %>%
         select(word,abs)
 head(word.compare)
-#select feature
-manual.select <- union(words.mean,words.fan)
-common <- intersect(manual.select,word.compare[1:200,1])
-common
-
+dictionary_model <- word.compare[1:200,1]
+        
 ```
 
 
 ##3.2 Convert to vector input
-Foe each person, construct a 84 dimensional vector, corresponding to the frequencies of the 84 feature words in this person's tweets.
+For each person, construct a 200 dimensional vector, corresponding to the frequencies of the 200 selected feature words in this person's tweets.
 
 ```{r data convert}
-tweet.mean <- gsub("[[:punct:]]","",tweet.mean)
-tweet.mean <- tolower(tweet.mean)
-tweet.fan <- gsub("[[:punct:]]","",tweet.fan)
-tweet.fan <- tolower(tweet.fan)
-dictionary_model <- as.vector(read.table("dictionary_model")[,1])
 #count the number of dictionary words for each person
 train.mean <- sapply(dictionary_model, function(x) MyCount(tweet.mean,x))
 train.fan <- sapply(dictionary_model, function(x) MyCount(tweet.fan,x))
@@ -347,58 +378,128 @@ train.fan <- train.fan/count.fan
 y <- c(rep(1,n.mean),rep(0,n.fan))
 data <- data.frame(y = y, rbind(train.mean,train.fan))
 head(data)
-#delete rows with all 0s
-id <- which(apply(data[,-1],1,function(x) all(x==0))==TRUE)
-data <- data[-id,]
+id <- c(id.mean,n.mean+id.fan)
+train <- data[id,]
+test <- data[-id,]
 
 ```
 
-##3.2 Logistic regression
+##3.3 Machine learning models
 
-10 fold CV for all 84 features and select 20 significant features. MSE is 0.18 for all features and 0.15 for significant features. Accuracy is 78\% for all features and 83\% for selected features.
+#3.3.1 Logistic regression with L1 penalty
+
+Fit a logistic regression with Lasso penalty on the training set. The optimal parameter is $\lambda = 0.02$. Words with non-zero coefficients are listed. The training accuracy is 0.853125 and the test accuracy is 0.725.
 
 ```{r logit}
-#full data cv
-fit.logit <- glm(y~.,data = data,family = "binomial")
-summary(fit.logit)
+library(glmnet)
+#choose the best lambda
 set.seed(1)
-cv.logit <- cv.glm(data,fit.logit,K=10)$delta
-cv.logit
-#select data cv
-data.select <- data[,c("y","popcrave","shit","bitch","thank","ass","music","hope","dietcoke","black","white","beautiful","hell","legend","miss","taylornation13","taylorswift","ariastaylorswift","lang","ts6","awesome")]
-fit.logit.select <- glm(y~.,data = data.select,family = "binomial")
-set.seed(1)
-cv.logit.select <- cv.glm(data.select,fit.logit.select,K=10)$delta
-cv.logit.select
-#full data error rate
-accuracy.full <- NULL
-for (i in 1:10)
-{
-        test.id <- seq(78*(i-1)+1,78*i)
-        fit.logit.train <- glm(y~.,data = data,family = "binomial",subset = -test.id)
-        y.prob <- predict(fit.logit.train,data[test.id,],type = "response")
-        y.true <- y[test.id]
-        y.predict <- numeric(length(test.id))
-        y.predict[which(y.prob>=0.5)] <-1
-        accuracy.full[i] <- sum(y.true==y.predict)/length(test.id)
-}
-mean(accuracy.full)
+fit.glmnet <- cv.glmnet(x = as.matrix(train[,-1]),y = as.factor(train[,1]),family = "binomial")
+plot(fit.glmnet)
+lambda <- fit.glmnet$lambda.min
+lambda
+coef(fit.glmnet,s=lambda)
+#arrange coef
+coef <- as.matrix(coef(fit.glmnet,s=lambda))
+coef<- data.frame(word = rownames(coef),coef = coef) 
+colnames(coef) <- c("word","coef")
+coef <- coef %>% filter(coef!=0) %>% arrange(desc(coef))
+coef.mean <- coef[1:35,]
+coef.fan <- coef[56:37,]
+rownames(coef.fan) = 1:20
+#training error
+y.train <- train[,"y"]
+y.pred <- predict(fit.glmnet,newx = as.matrix(train[,-1]),s = lambda, type = "class")
+table(y.pred,y.train)
+(table(y.pred,y.train)[1,1]+table(y.pred,y.train)[2,2])/sum(table(y.pred,y.train))
 
-#select data error rate
-accuracy.select <- NULL
-for (i in 1:10)
-{
-        test.id <- seq(78*(i-1)+1,78*i)
-        fit.logit.train <- glm(y~.,data = data.select,family = "binomial",subset = -test.id)
-        y.prob <- predict(fit.logit.train,data.select[test.id,],type = "response")
-        y.true <- y[test.id]
-        y.predict <- numeric(length(test.id))
-        y.predict[which(y.prob>=0.5)] <-1
-        accuracy.select[i] <- sum(y.true==y.predict)/length(test.id)
-}
-mean(accuracy.select)
+#prediction error
+glmnet.pred <- predict(fit.glmnet,newx = as.matrix(test[,-1]),s = lambda, type = "class")
+y.test <- test[,"y"]
+table(glmnet.pred,y.test)
+(table(glmnet.pred,y.test)[1,1]+table(glmnet.pred,y.test)[2,2])/sum(table(glmnet.pred,y.test))
 
 ```
 
+#3.3.2 Classification tree
 
+Fit a classification tree on the training set. The fitted tree has 25 internal nodes(variables) and 28 terminal nodes. The accuracy is 0.90938 on the training set. The accuracy on the test set is 0.7125. Use 10 fold cross validation on the training set to select the best tree size. The best tree size is 14 with deviance 136. Then fit the tree with size 14 on the training set. The accuracy on the training set is 0.8828, while the accuracy on the test set is 0.725.
+
+```{r classification tree,fig.width=10, fig.height=10}
+library(tree)
+#fit tree
+set.seed(1)
+fit.tree <- tree(as.factor(y)~.,data = train) 
+summary(fit.tree)
+plot(fit.tree)
+text(fit.tree,pretty =0)
+#prediction error
+tree.pred <- predict(fit.tree,test,type="class")
+table(tree.pred,y.test)
+(table(tree.pred,y.test)[1,1]+table(tree.pred,y.test)[2,2])/sum(table(tree.pred,y.test))
+#cv to choose best size
+set.seed(1)
+cv.tree.best =cv.tree(fit.tree,FUN=prune.misclass)
+cv.tree.best
+#fit tree for best size
+prune.tree <- prune.misclass(fit.tree,best=14)
+summary(prune.tree)
+plot(prune.tree)
+text(prune.tree,pretty=0)
+#test error
+tree.pred.prune <- predict(prune.tree,test,type="class")
+table(tree.pred.prune,y.test)
+(table(tree.pred.prune,y.test)[1,1]+table(tree.pred.prune,y.test)[2,2])/sum(table(tree.pred.prune,y.test))
+```
+
+#3.3.3 Bagging and Random Forest
+Bagging is a special case of random forest with m=p, namely to consider all predictors in each node. The accuracy on the trining set is 0.821875 and the accuracy on the test set is 0.80625.
+
+Random forest considers m predictors in each node. Here we choose $m=\sqrt{p} = \sqrt{200} = 14$ predictors.Variable importance plot shows similar result as bagging. The accuracy on the training set is 0.834375 and the accuarcy on the test set is 0.83125.
+
+```{r random forest,fig.width=10, fig.height=10}
+library(randomForest)
+#bagging
+set.seed(1)
+fit.bag <- randomForest(as.factor(y)~.,data = train,mtry=200,importance =TRUE)
+fit.bag
+varImpPlot(fit.bag,main = "Variable importance plot for Bagging")
+#training error
+table <- fit.bag$confusion[,1:2]
+(table[1,1]+table[2,2])/sum(table)
+#test error
+bag.pred <- predict(fit.bag,newdata=test)
+table(bag.pred,y.test)
+(table(bag.pred,y.test)[1,1]+table(bag.pred,y.test)[2,2])/sum(table(bag.pred,y.test))
+
+#random forest
+set.seed(1)
+fit.forest <- randomForest(as.factor(y)~.,data = train,importance = TRUE)
+fit.forest
+varImpPlot(fit.forest,main = "Variable importance plot for Random Forest")
+#training error
+table <- fit.forest$confusion[,1:2]
+(table[1,1]+table[2,2])/sum(table)
+#test error
+forest.pred <- predict(fit.forest,newdata=test)
+table(forest.pred,y.test)
+(table(forest.pred,y.test)[1,1]+table(forest.pred,y.test)[2,2])/sum(table(forest.pred,y.test))
+        
+```
+
+
+###4 Result
+##4.1 Compariosn of different models
+```{r result}
+result <- data.frame(training_accuracy =c(0.853125,0.90938,0.8828,0.821875,0.834375),test_accuracy= c(0.725,0.7125,0.725,0.80625,0.83125),method = c("glmnet","tree","tree_prune","bagging","random_forest"))
+#plot
+ggplot(result) +
+        geom_point(aes(x= method, y = training_accuracy,color = "training"))+
+        geom_line(aes(x= method, y = training_accuracy,color = "training",group = 1)) +
+        geom_point(aes(x= method,y = test_accuracy,color = "test")) + 
+        geom_line(aes(x= method,y = test_accuracy,color = "test",group=1)) +
+        labs(y = "prediction accuracy", title = "Performance of 5 methods" ) + 
+        theme(plot.title = element_text(size = 18),axis.title = element_text(size = 15),axis.text = element_text(size = 12),legend.text = element_text(size = 15),legend.title = element_text(size = 18))
+
+```
 
