--- a/code.Rmd
+++ b/code.Rmd
@@ -8,6 +8,21 @@ output: html_document
 ##0.0 Set up
 Require libraries and set up Twitter API.
 ```{r set up}
+install.packages("twitteR",repos = "http://cran.us.r-project.org")
+install.packages("RCurl",repos = "http://cran.us.r-project.org")
+install.packages("stringr",repos = "http://cran.us.r-project.org")
+install.packages("tm",repos = "http://cran.us.r-project.org")
+install.packages("wordcloud",repos = "http://cran.us.r-project.org")
+install.packages("dplyr",repos = "http://cran.us.r-project.org")
+install.packages("ggplot2",repos = "http://cran.us.r-project.org")
+install.packages("knitr",repos = "http://cran.us.r-project.org")
+install.packages("SnowballC",repos = "http://cran.us.r-project.org")
+install.packages("glmnet",repos = "http://cran.us.r-project.org")
+install.packages("tree",repos = "http://cran.us.r-project.org")
+install.packages("randomForest",repos = "http://cran.us.r-project.org")
+install.packages("./Rpackages/Rstem_0.4-1.tar.gz",repos = NULL, type = "source")
+install.packages("./Rpackages/sentiment_0.1.tar.gz", repos = NULL, type = "source")
+
 library(twitteR)
 library(RCurl)
 library(stringr)
@@ -488,18 +503,4 @@ table(forest.pred,y.test)
 ```
 
 
-###4 Result
-##4.1 Compariosn of different models
-```{r result}
-result <- data.frame(training_accuracy =c(0.853125,0.90938,0.8828,0.821875,0.834375),test_accuracy= c(0.725,0.7125,0.725,0.80625,0.83125),method = c("glmnet","tree","tree_prune","bagging","random_forest"))
-#plot
-ggplot(result) +
-        geom_point(aes(x= method, y = training_accuracy,color = "training"))+
-        geom_line(aes(x= method, y = training_accuracy,color = "training",group = 1)) +
-        geom_point(aes(x= method,y = test_accuracy,color = "test")) + 
-        geom_line(aes(x= method,y = test_accuracy,color = "test",group=1)) +
-        labs(y = "prediction accuracy", title = "Performance of 5 methods" ) + 
-        theme(plot.title = element_text(size = 18),axis.title = element_text(size = 15),axis.text = element_text(size = 12),legend.text = element_text(size = 15),legend.title = element_text(size = 18))
-
-```
 
